# tox-uv

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/tox_uv/: __about__.py  plugin.py
tests/: __init__.py
